Uebung 2 finished
